# insight_care

./: .gitignore  README.md  devbox.json  pyproject.toml  sample-terraform.tfvars  sample.env
ai_pocs/: __main__.py
ai_pocs/insight_care/: insight_care.py  insight_care_states.py
ai_pocs/insight_care/docs/: state_machine.puml
insight_care/: __main__.py  insight_care.py  insight_care_prompts.py  insight_care_states.py
